--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 @media (max-width: 586px) {
+  .about-heading {
+  font-size: 48px;
+  margin-bottom: 10px;
+  }
+
   .projects img {
     display: none;
   }
@@ -12,6 +17,11 @@
     text-align: center;
     margin: 0 20px;
   }
+
+  .navbar-nav a {
+    text-align: left;
+  }
+
 }
 :root {
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -47,6 +57,7 @@ h4 {
   font-size: 24px;
   opacity: 0.7;
 }
+
 p {
   font-size: 18px;
   line-height: 1.5;
